add graphql restaurant and restaurant image model
