# docs/swagger.json
@@ -129,15 +129,15 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Pay subscription API",
+                "summary": "Pay subscription package API",
                 "parameters": [
                     {
-                        "description": "PaySubscription body",
+                        "description": "PaySubPackage body",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/client.PaySubscriptionRequest"
+                            "$ref": "#/definitions/client.PaySubPackageRequest"
                         }
                     }
                 ],
@@ -285,17 +285,17 @@
                 }
             }
         },
-        "client.PaySubscriptionRequest": {
+        "client.PaySubPackageRequest": {
             "type": "object",
             "required": [
                 "restaurantId",
-                "subscriptionId"
+                "subPackageId"
             ],
             "properties": {
                 "restaurantId": {
                     "type": "integer"
                 },
-                "subscriptionId": {
+                "subPackageId": {
                     "type": "integer"
                 }
             }
